# duplicate_files_tracker

./: .gitignore  CMakeLists.txt  README.md  duplicates_handler.cpp  duplicates_handler.h  file_handler.cpp  file_handler.h  file_hasher.cpp  file_hasher.h  hash_generator.cpp  hash_generator.h  logger.cpp  logger.h  main.cpp
include/: hash_generator.h  logger.h
src/: duplicates_handler.cpp  hash_generator.cpp  logger.cpp  main.cpp
